Dividindo pesos dos botões

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
             android:textSize="36sp" />
     </TableRow>
 
-
     <TableRow
         android:id="@+id/table_row_first_child"
         android:layout_width="match_parent"
@@ -27,62 +26,64 @@
 
         <Button
             android:id="@+id/button_one"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_column="0"
+            android:layout_weight="1"
             android:text="1" />
 
         <Button
             android:id="@+id/button_two"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_column="1"
+            android:layout_weight="1"
             android:text="2" />
-
 
         <Button
             android:id="@+id/button_three"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_column="2"
+            android:layout_weight="1"
             android:text="3" />
 
         <Button
             android:id="@+id/button_four"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_column="3"
+            android:layout_weight="1"
             android:text="4" />
     </TableRow>
 
     <TableRow
         android:id="@+id/table_row_second_child"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/button_sum"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="+" />
 
         <Button
             android:id="@+id/button_sub"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="-" />
 
         <Button
             android:id="@+id/button_mult"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="*" />
 
         <Button
             android:id="@+id/button_result"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="=" />
     </TableRow>
 </TableLayout>
